[package]
name = "Chess_fight_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
tower = "0.4"
tungstenite = "0.26.2"
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0"
